<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/image_desc"
            android:padding="5dp"
            android:background="@drawable/add_button_background"
            android:scaleType="fitXY"
            android:src="@drawable/city_palace" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_name"
            android:textSize="24sp"
            android:fontFamily="@font/figtree_semibold"
            android:textFontWeight="600"
            android:paddingVertical="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/figtree_semibold"
            android:text="@string/place_details"
            android:maxLines="2"
            android:paddingVertical="3dp" />

        <TextView
            android:id="@+id/textViewWikipediaLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wikipedia_link"
            android:textColor="@color/link_color"
            android:fontFamily="@font/figtree_semibold"
            android:paddingVertical="3dp"
            android:clickable="true" />

        <Button
            android:id="@+id/buttonGoToQuiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/figtree_semibold"
            android:text="@string/go_to_quiz"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/figtree_semibold"
            android:textFontWeight="600"
            android:text="@string/popular_places"
            android:textSize="20sp"
            android:paddingVertical="13dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPopularPlaces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:scrollbars="horizontal" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:orientation="horizontal"
            android:gravity="end">
            <FrameLayout
                android:id="@+id/alreadyFrame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@drawable/button_border_gradient">
                <TextView
                    android:id="@+id/step_count_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="13dp"
                   android:paddingHorizontal="5dp"
                    android:textColor="#EC2127"
                    android:textStyle="bold"
                    android:textFontWeight="600"
                    android:fontFamily="@font/figtree_bold"
                    android:text="2000 Steps" />
            </FrameLayout>




        </LinearLayout>



    </LinearLayout>
</ScrollView>
